--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Header -->
     <header>
-      <h1>Min <span>Okkar</span></h1>
+      <h1>Min Okkar</h1>
       <p>Sharing my thoughts on web development, technology, and more</p>
     </header>
 
